updated font color, fixed the jump issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,26 @@
 .navigation {
-    padding: 30px;
+    padding: 10px;
+    margin: 10px 40px 20px 40px;
 }
 
 .navigation li {
     font: 13px arial;
     list-style: none;
-    display: inline; 
-    margin: 0 10px; 
+    display: inline;
+    margin: 0 10px;
 }
 
 .navigation li a {
     text-decoration: none;
+    color: #336699;
 }
 
 #sign-in a {
-    color: #4DA6FB;
+    color: #18AFE0;
+}
+
+#day {
+    color: #999999;
 }
 
 .info {
@@ -28,7 +34,9 @@
 }
 
 .title {
-    padding: 5px;
+    padding-bottom: 10px;
+    margin: 0;
+    height: 130px;
 }
 
 .title h1 {
@@ -41,29 +49,23 @@
     font-size: 20px;
 }
 
-.product-info { 
+.product-info {
     list-style: none;
-    display: inline-block;  
+    display: inline-block;
     height: 220px;
     width: 138px;
     margin: 20px;
     border: 1px solid #dcdcdc;
-    border-radius: :; 
     padding: 10px 20px;
     background: linear-gradient(#fff, #e8e8e8);
     font-size: 14px;
-    /*font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;*/
 }
 
 .use {
-    color: #e60000; 
+    color: #e60000;
     font-weight: bold;
     margin: 5px;
 }
-
-/*.description {
-    font-size: 14px;
-}*/
 
 .product-title {
     font-size: 23px;
@@ -71,14 +73,17 @@
 
 .super {
     vertical-align: top;
-    font-size: 10px; 
+    font-size: 10px;
     font-weight: lighter;
 }
 
 .product {
     display: none;
+    margin-bottom: 0;
 }
 
 .product h1 {
     font-size: 46px;
 }
+
+.product p {}
